force-app/main/default/objects/Communication_Ban__c/Communication_Ban__c.object-meta.xml
<CustomObject>
    <label>Communication Ban</label>
    <nameField>
        <displayFormat>COM-BAN-{0000}</displayFormat>
        <label>Communication Ban Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Bans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>