force-app/main/default/objects/Communication_Ban__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Communication Bans</relationshipLabel>
    <relationshipName>Communication_Bans</relationshipName>
    <type>Lookup</type>
</CustomField>