force-app/main/default/objects/Communication_Ban__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Communication Bans</relationshipLabel>
    <relationshipName>Communication_Bans</relationshipName>
    <type>Lookup</type>
</CustomField>