force-app/main/default/objects/Communication_Ban__c/fields/Phone_E164__c.field-meta.xml
<CustomField>
    <fullName>Phone_E164__c</fullName>
    <label>Phone E164</label>
    <type>Phone</type>
</CustomField>