force-app/main/default/objects/Communication_Ban__c/fields/Recipient_ID__c.field-meta.xml
<CustomField>
    <fullName>Recipient_ID__c</fullName>
    <label>Recipient ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>