force-app/main/default/objects/Communication_Ban__c/listViews/Unmatched_Bans.listView-meta.xml
<ListView>
    <fullName>Unmatched_Bans</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Phone_E164__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>Unmatched Bans</label>
</ListView>